--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CodeBreakers Card Generator</title>
+  <title>Card Generator</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -42,7 +42,7 @@
   </style>
 </head>
 <body>
-  <h1>Card Generator</h1>
+  <h1>CodeBreakers Card Generator</h1>
   
   <!-- Form for user input -->
   <div id="form">
