--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </style>
 </head>
 <body>
-  <h1>CodeBreakers Card Generator</h1>
+  <h1>Card Generator</h1>
   
   <!-- Form for user input -->
   <div id="form">
