--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </style>
 </head>
 <body>
-  <h1>Card Generator</h1>
+  <h1>Codebreakers Card Generator</h1>
   
   <!-- Form for user input -->
   <div id="form">
@@ -51,7 +51,7 @@
       <input type="text" id="name" placeholder="Enter card name">
     </div>
     <div class="form-group">
-      <label for="cardType">Card Type:</label>
+      <label for="cardType">Type:</label>
       <select id="cardType">
         <option value="Character">Character</option>
         <option value="Equipment">Equipment</option>
