--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
       </select>
     </div>
     <div class="form-group">
+      <label for="faction">Faction:</label>
+      <select id="faction">
+        <option value="Hackers">Hackers</option>
+        <option value="CEO">CEO</option>
+        <option value="Misc">Misc</option>
+      </select>
+    </div>
+    <div class="form-group">
       <label for="stats">Stats:</label>
       <input type="text" id="stats" placeholder="Enter stats">
     </div>
@@ -82,6 +90,12 @@
     <button id="generateCard">Generate Card</button>
     <button id="downloadCard">Download Card</button>
   </div>
+
+<div class="form-group">
+  <label for="loadFile">Load Card Details:</label>
+  <input type="file" id="loadFile" accept=".txt">
+</div>
+<button id="loadCard">Load Card</button>
 
   <!-- Canvas for displaying the generated card -->
   <div id="canvas-container">
