--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
     canvas {
       border: 1px solid #000;
     }
+    #savedCardsContainer {
+      margin-top: 20px;
+    }
+    .saved-card {
+      border: 1px solid #ccc;
+      padding: 10px;
+      margin-bottom: 10px;
+      background-color: #fff;
+    }
   </style>
 </head>
 <body>
@@ -79,7 +88,7 @@
     </div>
     <div class="form-group">
       <label for="credits">Credits:</label>
-      <input type="number" id="credits" name="credits" min="1" max="5" placeholder="Enter credits">
+      <input type="number" id="credits" name="credits" placeholder="Enter credits" min="1" max="5">
     </div>
     <div class="form-group">
       <label for="flavorText">Flavor Text:</label>
@@ -89,6 +98,7 @@
     <!-- Buttons for generating and downloading cards -->
     <button id="generateCard">Generate Card</button>
     <button id="downloadCard">Download Card</button>
+    <button id="viewSavedCards">View Saved Cards</button>
   </div>
 
   <div class="form-group">
@@ -100,6 +110,9 @@
   <div id="canvas-container">
     <canvas id="cardCanvas" width="600" height="900"></canvas>
   </div>
+
+  <!-- Container to display saved cards -->
+  <div id="savedCardsContainer">
 
   <script src="script.js"></script>
 </body>
